overflow fix

--- a/src/scss/_1.grid.scss
+++ b/src/scss/_1.grid.scss
@@ -119,6 +119,7 @@
 
 			@media #{$tablet_portrait} {
 				max-height: none;
+				overflow: visible;
 			}
 		}
 	}
